# hunting-world

./: .gitignore  BattleLogic.h  BattleMenu.h  CMakeLists.txt  Color.h  Enemy.h  Enum_List.h  FightLogic.h  HeirsOfAnEnemy.h  HeirsOfAnItem.h  HeirsOfAnWeapon.h  Hero.h  ItemClass.h  Listgui.h  LocationLogic.h  Logic.h  LogicShopFunction.h  Person.h  README.md  Sms.h  Sprites.h  StateMachine.h  SupportFunctions.h  TextMode.h  Weapon.h  battleLogic.cpp  battleMenu.cpp  bottleHealth.cpp  cake.cpp  color.cpp  enemy.cpp  fightLogic.cpp  healthScroll.cpp  hero.cpp  inventoryLogic.cpp  locationLogic.cpp  logic.cpp  logicShopFunction.cpp  main.cpp  medicinalHerb.cpp  (+4 more)
.cache/clangd/index/: BattleLogic.h.42391A6CBA9B82DD.idx  BattleLogic.h.71D78AD8CE17C3C3.idx  BattleMenu.h.CEDEF1FCB976F6C5.idx  Enemy.h.C1FE17A206139E34.idx  Enemy.h.CC7DA601561A7285.idx  Enum_List.h.10E934374713A992.idx  Enum_List.h.4EEADEB5DD563C72.idx  FightLogic.h.694E008F46A0F29D.idx  FightLogic.h.CE56AF995E21E037.idx  HeirsOfAnEnemy.h.17615DC2E6C45DB9.idx  HeirsOfAnItem.h.F886CB23A3EAE619.idx  HeirsOfAnWeapon.h.3B85BD0554BE6AFA.idx  Hero.h.02ED4C60EF63B162.idx  InventoryLogic.h.405FE85E6C4A690B.idx  ItemClass.h.2D508975BF0FBD21.idx  Listgui.h.134123F255804901.idx  LocationLogic.h.99302C48DF6E9161.idx  Logic.h.2E36559875A51CEF.idx  Logic.h.5AEC6E0829D8A0D9.idx  LogicShopFunction.h.57BB7D7862E1ECA3.idx  LogicShopFunction.h.6A7F54744DB4E49C.idx  ModulePerson.h.A4134E760AE2352F.idx  ModulePerson.h.AFAB29AC0917CE08.idx  Person.h.D9B7C0537BD92F40.idx  Person.h.F6BF8AE844B52464.idx  Sms.h.081ED439D7F24108.idx  Sprites.h.B254FD63DD557C89.idx  Sprites.h.E29C072BF4F09F48.idx  StateMachine.h.75AA79559AF8C0AD.idx  (+91 more)
HuntingWorld/: CMakeLists.txt
HuntingWorld/.cache/clangd/index/: BattleMenu.h.58FE82679A23C3E9.idx  HeirsOfAnEnemy.h.9C9B36C92A9D6AF7.idx  HeirsOfAnItem.h.231BF14C2DC85389.idx  HeirsOfAnWeapon.h.20CCA3A564D2C643.idx  Hero.h.C02C6DA460779F86.idx  InventoryLogic.h.97089D3C47D3412A.idx  ItemClass.h.11388D4D0AE5C452.idx  Listgui.h.B541B0206EF35532.idx  LocationLogic.h.873E9F6445EF9EDB.idx  Sms.h.51DBBBBC4CFE76F6.idx  SupportFunctions.h.726DF78FDDC589DC.idx  Weapon.h.5C73617D962F0776.idx  battleLogic.cpp.797188C832612B6D.idx  battleMenu.cpp.D24CBC36982C34E0.idx  console.hpp.C498326B0C94FC3B.idx  fightLogic.cpp.ACF8C2E71E051F3A.idx  healthScroll.cpp.FFCC865621A992DF.idx  inventoryLogic.cpp.61BF77D5CBCB295F.idx  locationLogic.cpp.22126263CA5FE640.idx  logic.cpp.DED5D590947AF7B4.idx  logicShopFunction.cpp.B3644E9EBDAD1734.idx  medicinalHerb.cpp.FAD7B6CC50200691.idx  sms.cpp.A38B4E0F205A9C13.idx  textMode.cpp.50D4EB8CAD0B08F2.idx  weapon.cpp.F6343D28AAFE5554.idx
HuntingWorld/inc/: BattleMenu.h  FightLogic.h  HeirsOfAnItem.h  Hero.h  InventoryLogic.h  ItemClass.h  SupportFunctions.h  console.hpp  lpct.hpp
HuntingWorld/src/: battleLogic.cpp  battleMenu.cpp  fightLogic.cpp  inventoryLogic.cpp  logic.cpp  logicShopFunction.cpp  lpct.cpp  main.cpp  medicinalHerb.cpp  sms.cpp  textMode.cpp  weapon.cpp
inc/: BattleLogic.h  Enemy.h  Enum_List.h  HeirsOfAnEnemy.h  HeirsOfAnWeapon.h  Listgui.h  ModulePerson.h  Sprites.h  SupportFunctions.h  Weapon.h  iusermenu.hpp  screenstack.hpp
inc/consolereader/: istandartreader.hpp  numsreader.hpp
inc/constants/: constants.hpp
inc/lpct/: lpct.hpp
inc/tui/: screenstack.hpp
src/: .main.cpp.swp  battleLogic.cpp  bottleHealth.cpp  cake.cpp  enemy.cpp  fightLogic.cpp  hero.cpp  inventoryLogic.cpp  locationLogic.cpp  main.cpp  screenstack.cpp  sms.cpp  supportFunctions.cpp  textMode.cpp
src/consolereader/: .numsreader.cpp.swp  istandartreader.cpp  numsreader.cpp
src/game_logic/: player.hpp
src/lpct/: lpct.cpp
src/tui/: gametui.cpp  gametui.hpp  screenstack.cpp  screenstack.hpp
(+23 files in other folders)
